@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.114 2007-10-06 14:35:18 cmatsuoka Exp $
+$Id: ChangeLog,v 1.115 2007-10-07 00:26:29 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -8,6 +8,7 @@ Stable versions
 	  speech in "Deep In Her Eyes Remake", reported by Douglas Carmichael)
 	- fixed copy of overlapping memory areas in IT loader
 	- fixed initialization of channel flags before loading module
+	- fixed PTM sample loop size (tested with abnormality.ptm)
 
 2.3.1 (20071005):
 	- added PTM global volume effect
